# dcrm

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
dcrm/dcrm/: create_admin_user.py  settings.py  urls.py
dcrm/website/: admin.py  models.py  urls.py  views.py
dcrm/website/migrations/: 0001_initial.py
dcrm/website/templates/: base.html  home.html  navbar.html  order.html
